--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div><!-- Nav -->
 
       <div class="hero">
-          <div class="eight columns left wow slideInLeft">
+          <div class="eight columns left">
             <!-- <div class="content wow slideInLeft" data-wow-delay=".1s">
               <div class="pulse-animation"></div>
               <h5>From the blog <span style="opacity: .5;">////////////////</span></h5>
@@ -62,7 +62,7 @@
               <a href="https://medium.com/@donnywilson/the-new-appcues-marketing-site-987326f8709e#.m19pox7rl" target="_blank"><button><i class="fa fa-bookmark-o fa-fw" aria-hidden="true"></i>View the post</button></a>
             </div> -->
             <div class="left-bar">
-              <div class="content">
+              <div class="content wow slideInLeft">
                   <div class="pulse-animation"></div>
                   <h5>My name is Donny <span style="opacity: .5; letter-spacing: -.1rem";>////////////////</span></h5>
                   <h1>I'm 
