--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 
             <div class="cta wow slideInUp" data-wow-delay="1s">
               <div class="social">
-                <a href="https://dribbble.com/donnywilson" target="_blank"><i class="fa fa-dribbble fa-2x"></i></a>
-                <a href="https://twitter.com/DonnyWilson"><i class="fa fa-twitter fa-2x" target="_blank"></i></a>
-                <a href="https://github.com/onenewera"><i class="fa fa-github fa-2x" target="_blank"></i></a>
+                <a href="https://dribbble.com/donnywilson" target="_blank"><i class="fa fa-dribbble fa-2x"></i><span class="tooltip">Dribbble</span></a>
+                <a href="https://twitter.com/DonnyWilson"><i class="fa fa-twitter fa-2x" target="_blank"></i><span class="tooltip">Twitter</span></a>
+                <a href="https://github.com/onenewera"><i class="fa fa-github fa-2x" target="_blank"></i><span class="tooltip">Github</span></a>
               </div>
             </div><!-- CTA -->
 
