--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div><!-- Nav -->
 
       <div class="hero">
-          <div class="eight columns left">
+          <div class="eight columns left wow slideInLeft">
             <!-- <div class="content wow slideInLeft" data-wow-delay=".1s">
               <div class="pulse-animation"></div>
               <h5>From the blog <span style="opacity: .5;">////////////////</span></h5>
