--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     <!-- <img src="images/updatedstates.gif" width=" 700px" id="animate-area" lass="hero-image wow fadeInLeft" data-wow-delay="1s"> -->
 
-    <div class="hero-image wow fadeInLeft" id="animate-area"> 
+    <div class="hero-image" id="animate-area"> 
     </div>
 
     <div class="app">
