ADDED IN THE BALL... THE BALL

--- a/index.html
+++ b/index.html
@@ -29,21 +29,28 @@
     </script>
   </head>
   <body>
-    <div class="divider-container wow fadeIn" data-wow-delay="2s">
-      
+    <div class="loader-overlay wow animated fadeIn" data-wow-delay="2.7s" data-wow-duration=".5s"></div>
+    <div class="loader wow fadeIn">
+      <div class="ball">
+        <img src="images/wilson-logo.svg" width="30px">
+      </div>
+      <span class="shadow"></span>
     </div>
+
     <!-- <img src="images/updatedstates.gif" width=" 700px" id="animate-area" lass="hero-image wow fadeInLeft" data-wow-delay="1s"> -->
 
-    <div class="hero-image" id="animate-area"> 
+    <div class="slider-image wow fadeIn" data-wow-delay="3s">
+      <div class="hero-image" id="animate-area"> 
+      </div>
     </div>
 
     <div class="app">
       <div class="nav">
-        <div class="logo six columns wow slideInDown" data-wow-delay="1s">
+        <div class="logo six columns wow slideInDown" data-wow-delay="3.6s">
           <img src="images/wilson-logo.svg" width="50px">
         </div><!-- logo -->
 
-        <div class="links six columns wow fadeIn" data-wow-delay="2s">
+        <div class="links six columns wow fadeIn" data-wow-delay="4s">
           <ol>
             <li><a href="http://iamdonny.com/practice/Coelusso/">colessuo</a></li>
             <li><a href="http://iamdonny.com/slideouts/">slideouts</a></li>
@@ -53,7 +60,7 @@
       </div><!-- Nav -->
 
       <div class="hero">
-          <div class="eight columns left wow slideInLeft">
+          <div class="eight columns left wow slideInLeft" data-wow-delay="3s">
             <!-- <div class="content wow slideInLeft" data-wow-delay=".1s">
               <div class="pulse-animation"></div>
               <h5>From the blog <span style="opacity: .5;">////////////////</span></h5>
@@ -62,14 +69,14 @@
               <a href="https://medium.com/@donnywilson/the-new-appcues-marketing-site-987326f8709e#.m19pox7rl" target="_blank"><button><i class="fa fa-bookmark-o fa-fw" aria-hidden="true"></i>View the post</button></a>
             </div> -->
             <div class="left-bar">
-              <div class="content wow fadeInLeft" data-wow-delay=".6s">
+              <div class="content wow fadeInLeft" data-wow-delay="3.4s">
                   <div class="pulse-animation"></div>
                   <h5>My name is Donny <span style="opacity: .5; letter-spacing: -.1rem";>////////////////</span></h5>
                   <h1>I'm 
                     <span
                        class="txt-rotate"
                        data-period="2000"
-                       data-rotate='[ "a Product Designer", "an Illustrator", "a Developer" ]'></span>
+                       data-rotate='[ "an Illustrator", "a Product Designer","a Developer" ]'></span>
                   </h1>
 
                   <h4>Have a project, idea, or question?<br> Let's talk about it</h4>
@@ -79,7 +86,7 @@
               </div><!-- Content -->
             </div>
 
-            <div class="cta wow slideInUp" data-wow-delay="1s">
+            <div class="cta wow slideInUp" data-wow-delay="3.6s">
               <div class="social">
                 <a href="https://dribbble.com/donnywilson" target="_blank"><i class="fa fa-dribbble fa-2x"></i><span class="tooltip">Dribbble</span></a>
                 <a href="https://twitter.com/DonnyWilson"><i class="fa fa-twitter fa-2x" target="_blank"></i><span class="tooltip">Twitter</span></a>
@@ -92,7 +99,7 @@
           <div class="panel-ctas">
             <div class="panel">
               <!-- <h5 class="wow fadeIn" data-wow-delay="2.3s">Hey, look at this.....</h5> -->
-              <a href="images/Donald-wilson-resume-8-16.pdf" target="_blank"><div class="resume wow fadeInUp" data-wow-delay="1.6s">
+              <a href="images/Donald-wilson-resume-8-16.pdf" target="_blank"><div class="resume wow fadeInUp" data-wow-delay="3.6s">
                 <div class="four columns icon">
                   <img src="images/resume-icon.svg" width="45px">
                 </div>
@@ -104,7 +111,7 @@
                 </div>
               </div></a><!-- resume -->
 
-              <a href="https://www.dribbble.com/donnywilson" target="_blank"><div class="dribble wow fadeInUp" data-wow-delay="1.8s">
+              <a href="https://www.dribbble.com/donnywilson" target="_blank"><div class="dribble wow fadeInUp" data-wow-delay="3.8s">
                 <div class="four columns icon">
                   <img src="images/port-icon.svg" width="45px">
                 </div>
