--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
     <!-- <img src="images/updatedstates.gif" width=" 700px" id="animate-area" lass="hero-image wow fadeInLeft" data-wow-delay="1s"> -->
 
-    <div class="slider-image wow fadeIn" data-wow-delay="3s">
+    <!-- <div class="slider-image wow fadeIn" data-wow-delay="3s">
       <div class="hero-image" id="animate-area"> 
       </div>
-    </div>
+    </div> -->
 
     <div class="app">
       <div class="nav">
