--- a/index.html
+++ b/index.html
@@ -37,8 +37,6 @@
       <span class="shadow"></span>
     </div>
 
-    <!-- <img src="images/updatedstates.gif" width=" 700px" id="animate-area" lass="hero-image wow fadeInLeft" data-wow-delay="1s"> -->
-
     <!-- <div class="slider-image wow fadeIn" data-wow-delay="3s">
       <div class="hero-image" id="animate-area"> 
       </div>
@@ -48,6 +46,7 @@
       <div class="nav">
         <div class="logo six columns wow slideInDown" data-wow-delay="3.6s">
           <img src="images/wilson-logo.svg" width="50px">
+          <button>Learn abo</button>
         </div><!-- logo -->
 
         <div class="links six columns wow fadeIn" data-wow-delay="4s">
