--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                   <h4>Have a project, idea, or question?<br> Let's talk about it</h4>
 
                   <a href="mailto:heydwilson@gmail.com?subject=Got an idea
-                  &body=Hey guy, here's an idea..."><button><i class="fa fa-envelope-o fa-fw" aria-hidden="true"></i>Chatting things</button></a>
+                  &body=Hey guy, here's an idea..."><button><i class="fa fa-envelope-o fa-fw" aria-hidden="true"></i>Talk to me</button></a>
               </div><!-- Content -->
             </div>
 
