--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
   <body>
     <div class="loader-overlay wow animated fadeIn" data-wow-delay="2.7s" data-wow-duration=".5s"></div>
     <div class="loader wow fadeIn">
-      <img class="ball" src="images/wilson-logo.svg">
+      <div class="ball">
+        <img src="images/wilson-logo.svg" width="30px">
+      </div>
       <span class="shadow"></span>
     </div>
 
