--- a/javaScriptDrumKit/index.html
+++ b/javaScriptDrumKit/index.html
@@ -11,7 +11,7 @@
 <div class="content">
   <h1>The Drums</h1>
   <h2>& Stuff</h2>
-  <p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Sed posuere consectetur est at lobortis. Sed posuere consectetur est at lobortis. Vestibulum id ligula porta felis euismod semper.</p>
+  <p>Like the drums? Always wanted to be able to practice those fat beats on teh go? Well, go ahead.</p>
 </div>
 
 
@@ -50,6 +50,34 @@
     </div>
     <div data-key="57" class="key">
       <kbd>9</kbd>
+      <span class="sound">tink</span>
+    </div>
+    <div data-key="57" class="key">
+      <kbd>Q</kbd>
+      <span class="sound">tink</span>
+    </div>
+    <div data-key="57" class="key">
+      <kbd>W</kbd>
+      <span class="sound">tink</span>
+    </div>
+    <div data-key="57" class="key">
+      <kbd>E</kbd>
+      <span class="sound">tink</span>
+    </div>
+    <div data-key="57" class="key">
+      <kbd>R</kbd>
+      <span class="sound">tink</span>
+    </div>
+    <div data-key="57" class="key">
+      <kbd>R</kbd>
+      <span class="sound">tink</span>
+    </div>
+    <div data-key="57" class="key">
+      <kbd>R</kbd>
+      <span class="sound">tink</span>
+    </div>
+    <div data-key="57" class="key">
+      <kbd>R</kbd>
       <span class="sound">tink</span>
     </div>
   </div>
