Revert "Revert this"
This reverts commit 390d04283b7c971c06df83957f2c8a785c8b52a9.

--- a/javaScriptDrumKit/index.html
+++ b/javaScriptDrumKit/index.html
@@ -10,6 +10,8 @@
 <body>
 <div class="content">
   <h1>The Drums</h1>
+  <h2>& Stuff</h2>
+  <p>Like the drums? Always wanted to be able to practice those fat beats on teh go? Well, go ahead.</p>
 </div>
 
 
